--- a/src/app/pages/call/call.component.html
+++ b/src/app/pages/call/call.component.html
@@ -262,11 +262,11 @@
           </div>
         </div>
         <div class="col-md-3 mb-3" *ngIf="'FORMS.FIELD_NAMES.type_status.label' | translate as translatedLabel;">
-          <label for="tipo_estados_id" class="form-label">{{translatedLabel}}</label>
-          <select class="form-select custom-select" id="tipo_estados_id" formControlName="tipo_estados_id" [ngClass]="{ 'is-invalid': form.tipo_estados_id.errors && (form.tipo_estados_id.dirty || form.tipo_estados_id.touched || submitted) }">
-            <option value="">{{'FORMS.FIELD_NAMES.type_status.default_option' | translate}}</option>
-            <option *ngFor="let typeStatus of listTypeStatus" [value]="typeStatus.id">{{typeStatus.nombre}}</option>
-          </select>          
+          <label for="tipo_estados_id" class="form-label">{{translatedLabel}}</label>     
+          <ng-select id="tipo_estados_id" formControlName="tipo_estados_id" [ngClass]="{ 'is-invalid': form.tipo_estados_id.errors && (form.tipo_estados_id.dirty || form.tipo_estados_id.touched || submitted) }">
+            <ng-option [value]="''">{{'FORMS.FIELD_NAMES.typification.default_option' | translate}}</ng-option>
+            <ng-option *ngFor="let typeStatus of listTypeStatus" [value]="typeStatus.id">{{typeStatus.nombre}}</ng-option>
+          </ng-select>     
           <div *ngIf="form.tipo_estados_id.errors && (form.tipo_estados_id.dirty || form.tipo_estados_id.touched || submitted)" class="invalid-feedback" align="left">
             <div *ngIf="form.tipo_estados_id.errors.required">
               {{'FORMS.VALIDATION.required' | translate | replaceAttribute:':attribute': translatedLabel}}
