--- a/src/app/pages/sale/forms/form-client/form-client.component.html
+++ b/src/app/pages/sale/forms/form-client/form-client.component.html
@@ -185,7 +185,7 @@
           <div class="col-md-4 mb-3"
             *ngIf="'FORMS.FIELD_NAMES.country.label' | translate as translatedLabel;">
             <label for="paises_id" class="form-label">{{translatedLabel}}</label>
-            <ng-select id="paises_id" formControlName="paises_id" autofocus
+            <ng-select id="paises_id" #paises_id formControlName="paises_id" autofocus
               [notFoundText]="'No se encontraron elementos'"
               [ngClass]="{ 'is-invalid': fp.paises_id.errors && (fp.paises_id.dirty || fp.paises_id.touched || submittedPerson) }">
               <ng-option [value]="''">{{'FORMS.FIELD_NAMES.country.default_option' | translate}}</ng-option>
@@ -279,7 +279,7 @@
           </div>
         </div>
         <div class="row g-2">
-          <div class="col-md-4 mb-3"
+          <div class="col-md-3 mb-3"
             *ngIf="'FORMS.FIELD_NAMES.type_document.label' | translate as translatedLabel;">
             <label for="tipo_documentos_id" class="form-label">{{translatedLabel}}</label>
             <ng-select id="tipo_documentos_id" formControlName="tipo_documentos_id"
@@ -295,7 +295,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3"
+          <div class="col-md-3 mb-3"
             *ngIf="'FORMS.FIELD_NAMES.document.label' | translate as translatedLabel;">
             <label for="documento" class="form-label">{{translatedLabel}}</label>
             <input type="text" id="documento" class="form-control"
@@ -315,7 +315,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3"
+          <div class="col-md-3 mb-3"
             *ngIf="'FORMS.FIELD_NAMES.document_reverse.label' | translate as translatedLabel;">
             <label for="reverso_documento" class="form-label">{{translatedLabel}}</label>
             <input type="text" id="reverso_documento" class="form-control" focus="true"
@@ -335,8 +335,6 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="row g-2">
           <div class="col-md-3 mb-3"
             *ngIf="'FORMS.FIELD_NAMES.birth_date.label' | translate as translatedLabel;">
             <label for="fecha_nacimiento" class="form-label">{{translatedLabel}}</label>
@@ -357,6 +355,8 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="row g-2 d-none">
           <div class="col-md-3 mb-3"
             *ngIf="'FORMS.FIELD_NAMES.phone.label' | translate as translatedLabel;">
             <label for="telefono" class="form-label">{{translatedLabel}}</label>
@@ -502,10 +502,22 @@
           <div class="col-md-4 mb-3"
             *ngIf="'FORMS.FIELD_NAMES.type_company.label' | translate as translatedLabel;">
             <label for="tipo_empresa" class="form-label">{{translatedLabel}}</label>
-            <input type="text" id="tipo_empresa" class="form-control"
-              formControlName="tipo_empresa"
-              placeholder="{{'FORMS.FIELD_NAMES.type_company.placeholder' | translate}}"
-              [ngClass]="{ 'is-invalid': fc.tipo_empresa.errors && (fc.tipo_empresa.dirty || fc.tipo_empresa.touched || submittedCompany) }" />
+            <ng-select id="tipo_empresa" formControlName="tipo_empresa"
+              [notFoundText]="'No se encontraron elementos'"
+              [ngClass]="{ 'is-invalid': fc.tipo_empresa.errors && (fc.tipo_empresa.dirty || fc.tipo_empresa.touched || submittedCompany) }">
+              <ng-option [value]="''">{{'FORMS.FIELD_NAMES.type_company.default_option' | translate}}</ng-option>
+              <ng-option value="Sociedad Anónima">Sociedad Anónima (S.A.)</ng-option>
+              <ng-option value="Sociedad de Responsabilidad Limitada">Sociedad de Responsabilidad Limitada (S.R.L.)</ng-option>
+              <ng-option value="Sociedad Anónima Simplificada">Sociedad Anónima Simplificada (S.A.S.)</ng-option>
+              <ng-option value="Empresa Individual de Responsabilidad Limitada">Empresa Individual de Responsabilidad Limitada (E.I.R.L.)</ng-option>
+              <ng-option value="Cooperativa">Cooperativa</ng-option>
+              <ng-option value="Asociación">Asociación</ng-option>
+              <ng-option value="Empresa Conjunta">Empresa Conjunta (Joint Venture)</ng-option>
+              <ng-option value="Emprendimiento Individual">Emprendimiento Individual</ng-option>
+              <ng-option value="Empresa Pública:">Empresa Pública:</ng-option>
+              <ng-option value="Empresa Privada:">Empresa Privada:</ng-option>
+              <ng-option value="Empresa Mixta:">Empresa Mixta:</ng-option>
+            </ng-select>
             <div *ngIf="fc.tipo_empresa.errors && (fc.tipo_empresa.dirty || fc.tipo_empresa.touched || submittedCompany)"
               class="invalid-feedback" align="left">
               <div *ngIf="fc.tipo_empresa.errors['required']">
@@ -561,7 +573,7 @@
             </div>
           </div>
         </div>
-        <div class="row g-2">
+        <div class="row g-2 d-none">
           <div class="col-md-3 mb-3"
             *ngIf="'FORMS.FIELD_NAMES.phone.label' | translate as translatedLabel;">
             <label for="telefono" class="form-label">{{translatedLabel}}</label>
@@ -664,7 +676,7 @@
     </accordion>
 
     <form (keydown.enter)="$event.preventDefault()" [formGroup]="clientForm" autocomplete="off">
-      <h5 class="card-title fw-bold">Otros datos</h5>
+      <h5 class="card-title fw-bold">Otros datos del cliente</h5>
       <div class="row g-2">
         <div class="col-md-2 mb-3"
           *ngIf="'FORMS.FIELD_NAMES.type_client.label' | translate as translatedLabel;">
@@ -756,6 +768,7 @@
   <div class="card-footer" [collapse]="isCollapseFormClient" [isAnimated]="true">
     <div class="hstack gap-2 justify-content-end">
       <button type="button" class="btn btn-light" (click)="toggleFormClient()">{{'FORMS.BUTTONS.CLOSE' | translate}}</button>
+      <button type="button" class="btn btn-secondary" (click)="resetFormClient()">{{'FORMS.BUTTONS.RESET' | translate}}</button>
       <button type="button" class="btn btn-info" *ngIf="!isNewDataClient" (click)="saveClient()">{{'FORMS.BUTTONS.UPDATE' | translate}}</button>
       <button type="button" class="btn btn-success"  *ngIf="isNewDataClient" (click)="saveClient()">{{'FORMS.BUTTONS.SAVE' | translate}}</button>
     </div>
