--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -8,11 +8,11 @@
     <ul class="metismenu list-unstyled" id="side-menu" #sideMenu>
       <!-- {{menuItems}} -->
       <ng-container *ngFor="let item of menuItems">
-        <li class="menu-title" *ngIf="item.isTitle">{{ item.label | translate }}</li>
-        <li *ngIf="!item.isTitle && !item.isLayout">
+        <li class="menu-title" *ngIf="item.isTitle && hasAccess(item)">{{ item.label | translate }}</li>
+        <li *ngIf="!item.isTitle && !item.isLayout && hasAccess(item)">
           <a *ngIf="hasItems(item)" href="javascript:void(0);" class="is-parent"
             [ngClass]="{'has-arrow': !item.badge, 'has-dropdown': item.badge}">
-            <i class="bx {{item.icon}}" *ngIf="item.icon"></i>
+            <i class="bx {{item.icon}}" *ngIf="item.icon "></i>
             <span> {{ item.label | translate }}</span>
             <span class="badge rounded-pill float-end bg-{{item.badge.variant}}" *ngIf="item.badge">{{item.badge.text |
               translate}}</span>
@@ -27,10 +27,11 @@
 
           <ul *ngIf="hasItems(item)" class="sub-menu" aria-expanded="false">
             <li *ngFor="let subitem of item.subItems">
-              <a routerLink="{{subitem.link}}" *ngIf="!hasItems(subitem)" class="side-nav-link-ref"
-                [attr.data-parent]="subitem.parentId" >
+              <a routerLink="{{subitem.link}}" *ngIf="!hasItems(subitem) && hasAccess(subitem)"
+                class="side-nav-link-ref" [attr.data-parent]="subitem.parentId">
                 {{ subitem.label | translate}}
-                <span class="badge rounded-pill bg-{{subitem.badge.variant}} float-end" *ngIf="subitem.badge">{{subitem.badge.text |
+                <span class="badge rounded-pill bg-{{subitem.badge.variant}} float-end"
+                  *ngIf="subitem.badge">{{subitem.badge.text |
                   translate}}</span>
               </a>
               <a *ngIf="hasItems(subitem)" class="side-nav-link-a-ref has-arrow" href="javascript:void(0);"
@@ -39,8 +40,8 @@
               </a>
               <ul *ngIf="hasItems(subitem)" class="sub-menu mm-collapse" aria-expanded="false">
                 <li *ngFor="let subSubitem of subitem.subItems">
-                  <a [attr.data-parent]="subSubitem.parentId" routerLink="{{subSubitem.link}}" 
-                    class="side-nav-link-ref">
+                  <a [attr.data-parent]="subSubitem.parentId" routerLink="{{subSubitem.link}}"
+                    *ngIf="hasAccess(subSubitem)" class="side-nav-link-ref">
                     {{ subSubitem.label | translate }}
                   </a>
                 </li>
