cambios en venta

--- a/src/app/pages/maintenance/type-currency/type-currency.component.html
+++ b/src/app/pages/maintenance/type-currency/type-currency.component.html
@@ -68,7 +68,7 @@
     <h5 class="modal-title" id="exampleModalLabel">{{dataModal.title}}</h5>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="modalRef?.hide()"></button>
   </div>
-  <form (keydown.enter)="$event.preventDefault()" [formGroup]="currencyForm" autocomplete="off">
+  <form (keydown.enter)="$event.preventDefault()" [formGroup]="typeCurrencyForm" autocomplete="off">
     <div class="modal-body">
 
       <div class="row g-2">
