--- a/src/app/pages/maintenance/product/product.component.html
+++ b/src/app/pages/maintenance/product/product.component.html
@@ -62,7 +62,7 @@
                   <td>{{data.tipo_servicios_nombre}}</td>
                   <td>{{data.nombre}}</td>
                   <td>{{data.descripcion}}</td>
-                  <td>{{data.divisas_nombre}}</td>
+                  <td>{{data.tipo_monedas_nombre}}</td>
                   <td>{{data.precio}}</td>
                   <td><span class="badge text-md" [ngClass]="{ 'bg-success': data.is_active == 1, 'bg-danger': data.is_active == 0}">{{data.is_active? 'Activo': 'Inactivo'}}</span></td>
                   <td>{{data.created_at}}</td>
@@ -185,18 +185,18 @@
         </div>
       </div>
       <div class="row g-2">
-        <div class="col-md-6 mb-3" *ngIf="'FORMS.FIELD_NAMES.currency.label' | translate as translatedLabel;">
-          <label for="divisas_id" class="form-label">{{translatedLabel}} *</label>
-          <ng-select id="divisas_id" formControlName="divisas_id" [ngClass]="{ 'is-invalid': form.divisas_id.errors && (form.divisas_id.dirty || form.divisas_id.touched || submitted) }">
-            <ng-option [value]="''">{{'FORMS.FIELD_NAMES.currency.default_option' | translate}}</ng-option>
+        <div class="col-md-6 mb-3" *ngIf="'FORMS.FIELD_NAMES.type_currency.label' | translate as translatedLabel;">
+          <label for="tipo_monedas_id" class="form-label">{{translatedLabel}} *</label>
+          <ng-select id="tipo_monedas_id" formControlName="tipo_monedas_id" [ngClass]="{ 'is-invalid': form.tipo_monedas_id.errors && (form.tipo_monedas_id.dirty || form.tipo_monedas_id.touched || submitted) }">
+            <ng-option [value]="''">{{'FORMS.FIELD_NAMES.type_currency.default_option' | translate}}</ng-option>
             <ng-option *ngFor="let currency of listCurrencies" [value]="currency.id">{{currency.nombre}}</ng-option>
           </ng-select>
-          <div *ngIf="form.divisas_id.errors && (form.divisas_id.dirty || form.divisas_id.touched || submitted)" class="invalid-feedback" align="left">
-            <div *ngIf="form.divisas_id.errors.required">
+          <div *ngIf="form.tipo_monedas_id.errors && (form.tipo_monedas_id.dirty || form.tipo_monedas_id.touched || submitted)" class="invalid-feedback" align="left">
+            <div *ngIf="form.tipo_monedas_id.errors.required">
               {{'FORMS.VALIDATION.required' | translate | replaceAttribute:':attribute': translatedLabel}}
             </div>
-            <div *ngIf="form.divisas_id.errors.min">
-              {{'FORMS.VALIDATION.min' | translate | replaceAttribute: ':attribute': translatedLabel | replaceAttribute: ':min': form.divisas_id.errors.min.requiredLength}}
+            <div *ngIf="form.tipo_monedas_id.errors.min">
+              {{'FORMS.VALIDATION.min' | translate | replaceAttribute: ':attribute': translatedLabel | replaceAttribute: ':min': form.tipo_monedas_id.errors.min.requiredLength}}
             </div>
           </div>
         </div>
