--- a/src/app/pages/sale/modals/modal-register/modal-register.component.scss
+++ b/src/app/pages/sale/modals/modal-register/modal-register.component.scss
@@ -6,12 +6,14 @@
 
   @media (max-width: 987px){
     max-height: 100%;
-    height: auto;
+    height: 100%;
+    overflow-y: auto;
   }
   @media (max-width: 767px){
     max-height: 100%;
-    height: auto;
+    height: 100%;
     padding: 0 !important;
+    overflow-y: auto;
   }
 
 }
