nuevos cambios en edit venta

--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -497,3 +497,11 @@ a.ck.ck-button.ck-on {
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
+
+/* ACCORDION */
+.accordion-customize{
+    .panel-body{
+        padding: 0 !important;
+    }
+}
+
