--- a/src/app/pages/sale/info/info-general/info-general.component.html
+++ b/src/app/pages/sale/info/info-general/info-general.component.html
@@ -1,7 +1,7 @@
 <div>
-  
+
   <strong class="text-primary mb-2">DATOS DEL CLIENTE</strong>
-  <div class="card border">
+  <div class="card border border-info">
     <div class="card-body">
 
       <div class="row g-3">
@@ -11,7 +11,7 @@
           </div>
         </div>
       </div>
-    
+
       <!-- EMPRESA -->
       <div class="row g-3" *ngIf="dataClient?.persona_juridica">
         <div class="col-md-4">
@@ -21,11 +21,16 @@
         </div>
         <div class="col-md-4">
           <div class="d-flex flex-wrap column-gap-2 justify-content-start align-items-start mb-1">
-            <strong>Razón social:</strong><span>{{dataCompany?.nombre_comercial}}</span>
+            <strong>Nombre comercial:</strong><span>{{dataCompany?.nombre_comercial}}</span>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="d-flex flex-wrap column-gap-2 justify-content-start align-items-start mb-1">
+            <strong>{{dataTypeDocument?.abreviacion}}:</strong><span>{{dataCompany?.documento}}</span>
           </div>
         </div>
       </div>
-          
+
       <!-- PERSONA -->
       <div class="row g-3" *ngIf="!dataClient?.persona_juridica">
         <div class="col-md-4">
@@ -44,10 +49,101 @@
           </div>
         </div>
       </div>
+
+      <!-- MÀS DATOS DEL CLIENTE -->
+      <hr>
+      <div class="row g-2">
+        <div class="col-md-4">
+          <div class="card card-body border">
+            <h5 class="card-title font-size-13 mb-3">Contactos</h5>
+            <ul class="verti-timeline list-unstyled">
+              <ng-container *ngFor="let item of listContact; index as i">
+                <ng-template [ngTemplateOutlet]="templateContact"[ngTemplateOutletContext]="{item:item, index: i}"></ng-template>
+              </ng-container>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card card-body border">
+            <h5 class="card-title font-size-13 mb-3">Direcciones</h5>
+            <ul class="verti-timeline list-unstyled">
+              <ng-container *ngFor="let item of listAddress; index as i">
+                <ng-template [ngTemplateOutlet]="templateAddress"[ngTemplateOutletContext]="{item:item, index: i}"></ng-template>
+              </ng-container>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card card-body border">
+            <h5 class="card-title font-size-13 mb-3">Cuentas bancarias</h5>
+            <ul class="verti-timeline list-unstyled">
+              <ng-container *ngFor="let item of listBankAccount; index as i">
+                <ng-template [ngTemplateOutlet]="templateBankAccount"[ngTemplateOutletContext]="{item:item, index: i}"></ng-template>
+              </ng-container>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
-  
+  <ng-template #templateContact let-item="item" let-i="index">
+    <li class="event-list pb-1" [ngClass]="{'active': item.is_primary == 1}">
+      <div class="event-timeline-dot">
+          <i class="bx bxs-right-arrow-circle font-size-18" [ngClass]="{'bx-fade-right': item.is_primary == 1}"></i>
+      </div>
+      <div class="d-flex flex-wrap">
+          <div class="flex-shrink-0 me-3">
+              <h5 class="font-size-14 text-capitalize">{{item.tipo_text}} <i class="bx bx-right-arrow-alt font-size-16 text-primary align-middle ms-2"></i>
+              </h5>
+          </div>
+          <div class="flex-grow-1">
+              <div>
+                  {{item.contacto}}
+              </div>
+          </div>
+      </div>
+    </li>
+  </ng-template>
+
+  <ng-template #templateAddress let-item="item" let-i="index">
+    <li class="event-list pb-1" [ngClass]="{'active': item.is_primary == 1}">
+      <div class="event-timeline-dot">
+          <i class="bx bxs-right-arrow-circle font-size-18" [ngClass]="{'bx-fade-right': item.is_primary == 1}"></i>
+      </div>
+      <div class="d-flex flex-wrap">
+          <div class="flex-shrink-0 me-3">
+              <h5 class="font-size-14 text-capitalize">{{item.codigo_postal}} <i class="bx bx-right-arrow-alt font-size-16 text-primary align-middle ms-2"></i>
+              </h5>
+          </div>
+          <div class="flex-grow-1">
+              <div>
+                  {{item.direccion_completo}}
+              </div>
+          </div>
+      </div>
+    </li>
+  </ng-template>
+
+  <ng-template #templateBankAccount let-item="item" let-i="index">
+    <li class="event-list pb-1" [ngClass]="{'active': item.is_primary == 1}">
+      <div class="event-timeline-dot">
+          <i class="bx bxs-right-arrow-circle font-size-18" [ngClass]="{'bx-fade-right': item.is_primary == 1}"></i>
+      </div>
+      <div class="d-flex flex-wrap">
+          <div class="flex-shrink-0 me-3">
+              <h5 class="font-size-14 text-capitalize">{{item.tipo_cuentas_bancarias_nombre}} <i class="bx bx-right-arrow-alt font-size-16 text-primary align-middle ms-2"></i>
+              </h5>
+          </div>
+          <div class="flex-grow-1">
+              <div>
+                  {{item.cuenta}}
+              </div>
+          </div>
+      </div>
+    </li>
+  </ng-template>
+
   <!-- DETALLE ´PRODUCTO -->
   <div class="row g-2 mt-3">
     <strong class="text-primary text-uppercase">Servicios agregado a la compra</strong>
@@ -57,18 +153,22 @@
       </div>
 
       <div *ngFor="let item of groupSaleDetail?.fixed">
-  
+
         <div class="card jobs-categories">
           <div class="card-body p-0">
-            <a href="javascript:void(0);" class="px-3 py-2 rounded bg-light bg-opacity-50 d-block mb-2" 
-            [ngClass]="{'border border-danger': getRowDetailIsNullJson(item)}"
-            (click)="toggleVisibility(item)">{{item?.servicios_nombre}} 
-            <span class="badge text-bg-info float-end bg-opacity-100 d-none">1</span></a>
+            <a href="javascript:void(0);" class="px-3 py-2 rounded bg-light bg-opacity-50 d-block mb-2"
+              [ngClass]="{'border border-danger': getRowDetailIsNullJson(item)}"
+              (click)="toggleVisibility(item)">{{item?.servicios_nombre}}
+              <span accordion-heading class="float-end fs-5">
+                <i class="mdi"
+                  [ngClass]="!item.visible ? 'mdi mdi-chevron-down accor-plus-icon': 'mdi mdi-chevron-up accor-plus-icon'"></i>
+              </span>
+            </a>
           </div>
           <div class="card-body border border-info rounded" *ngIf="item.visible">
-            <ng-container *ngTemplateOutlet="templateData; context: { $implicit: item }"></ng-container>  
+            <ng-container *ngTemplateOutlet="templateData; context: { $implicit: item }"></ng-container>
             <ng-container *ngTemplateOutlet="templateFixed; context: { $implicit: item }"></ng-container>
-            <ng-container *ngTemplateOutlet="templateInstallation; context: { $implicit: item }"></ng-container>  
+            <ng-container *ngTemplateOutlet="templateInstallation; context: { $implicit: item }"></ng-container>
           </div>
         </div>
       </div>
@@ -81,15 +181,19 @@
       <div *ngFor="let item of groupSaleDetail?.mobile">
         <div class="card jobs-categories">
           <div class="card-body p-0">
-            <a href="javascript:void(0);" class="px-3 py-2 rounded bg-light bg-opacity-50 d-block mb-2" 
+            <a href="javascript:void(0);" class="px-3 py-2 rounded bg-light bg-opacity-50 d-block mb-2"
               [ngClass]="{'border border-danger': getRowDetailIsNullJson(item)}"
-              (click)="toggleVisibility(item)">{{item?.servicios_nombre}} 
-              <span class="badge text-bg-info float-end bg-opacity-100 d-none">1</span></a>
+              (click)="toggleVisibility(item)">{{item?.servicios_nombre}}
+              <span accordion-heading class="float-end fs-5">
+                <i class="mdi"
+                  [ngClass]="!item.visible ? 'mdi mdi-chevron-down accor-plus-icon': 'mdi mdi-chevron-up accor-plus-icon'"></i>
+              </span>
+            </a>
           </div>
           <div class="card-body border border-info rounded" *ngIf="item.visible">
-            <ng-container *ngTemplateOutlet="templateData; context: { $implicit: item }"></ng-container>  
+            <ng-container *ngTemplateOutlet="templateData; context: { $implicit: item }"></ng-container>
             <ng-container *ngTemplateOutlet="templateMobile; context: { $implicit: item }"></ng-container>
-            <ng-container *ngTemplateOutlet="templateInstallation; context: { $implicit: item }"></ng-container>  
+            <ng-container *ngTemplateOutlet="templateInstallation; context: { $implicit: item }"></ng-container>
           </div>
         </div>
       </div>
@@ -102,14 +206,18 @@
       <div *ngFor="let item of groupSaleDetail?.tv">
         <div class="card jobs-categories">
           <div class="card-body p-0">
-            <a href="javascript:void(0);" class="px-3 py-2 rounded bg-light bg-opacity-50 d-block mb-2" 
+            <a href="javascript:void(0);" class="px-3 py-2 rounded bg-light bg-opacity-50 d-block mb-2"
               [ngClass]="{'border border-danger': getRowDetailIsNullJson(item)}"
-              (click)="toggleVisibility(item)">{{item?.servicios_nombre}} 
-              <span class="badge text-bg-info float-end bg-opacity-100 d-none">1</span></a>
+              (click)="toggleVisibility(item)">{{item?.servicios_nombre}}
+              <span accordion-heading class="float-end fs-5">
+                <i class="mdi"
+                  [ngClass]="!item.visible ? 'mdi mdi-chevron-down accor-plus-icon': 'mdi mdi-chevron-up accor-plus-icon'"></i>
+              </span>
+            </a>
           </div>
           <div class="card-body border border-info rounded" *ngIf="item.visible">
-            <ng-container *ngTemplateOutlet="templateData; context: { $implicit: item }"></ng-container>  
-            <ng-container *ngTemplateOutlet="templateInstallation; context: { $implicit: item }"></ng-container>  
+            <ng-container *ngTemplateOutlet="templateData; context: { $implicit: item }"></ng-container>
+            <ng-container *ngTemplateOutlet="templateInstallation; context: { $implicit: item }"></ng-container>
           </div>
         </div>
       </div>
@@ -208,5 +316,88 @@
       </div>
     </div>
   </ng-template>
-  
+
+  <!-- DOCUMENTOS, COMENTARIO, HISTORIAL -->
+  <div class="row g-2 mt-3">
+
+    <div class="col-md-4">
+      <strong class="text-primary text-uppercase">Archivos</strong>
+      <div *ngFor="let item of listSaleDocument">
+        <div class="card-body border border-info rounded p-1">
+          <ng-container *ngTemplateOutlet="templateDocument; context: { $implicit: item }"></ng-container>
+        </div>
+      </div>
+      <div *ngIf="!listSaleDocument?.length">
+        <p class="text-start">Sin registros</p>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <strong class="text-primary text-uppercase">Comentarios</strong>
+      <div *ngFor="let item of listSaleComment">
+        <div class="card-body border border-info rounded p-1">
+          <ng-container *ngTemplateOutlet="templateComment; context: { $implicit: item }"></ng-container>
+        </div>
+      </div>
+      <div *ngIf="!listSaleComment?.length">
+        <p class="text-start">Sin registros</p>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <strong class="text-primary text-uppercase">Historial</strong>
+      <div *ngFor="let item of listSaleHistory">
+        <div class="card-body border border-info rounded p-1">
+          <ng-container *ngTemplateOutlet="templateHistory; context: { $implicit: item }"></ng-container>
+        </div>
+      </div>
+      <div *ngIf="!listSaleHistory?.length">
+        <p class="text-start">Sin registros</p>
+      </div>
+    </div>
+  </div>
+
+
+  <ng-template #templateDocument let-item>
+    <div class="row g-2">
+      <div class="col-sm-4">
+        <img [src]="URL_FILES + item.archivo" alt="" class="rounded"
+          style="width: 100%; max-height: 80px; object-fit: contain; object-position: center;"
+          *ngIf="item.tipo == 'jpg' || item.tipo == 'jpeg' || item.tipo == 'png'">
+        <div *ngIf="item.tipo !== 'jpg' && item.tipo !== 'jpeg' && item.tipo !== 'png'"
+          class="w-100 bg-secondary rounded" style="height: 80px;">
+
+        </div>
+      </div>
+      <div class="col-sm-8">
+        <div class="h-100">
+          <span class="w-100 d-block fw-semibold">{{item.nombre}} ({{item.tipo}})</span>
+          <div class="text-start">
+            <span class="blockquote-footer">{{item.created_at}}</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </ng-template>
+
+  <ng-template #templateComment let-item>
+    <div *ngIf="item.comentario">
+      <p [ngClass]="{'text-truncate-3': !item.more}">{{item.comentario}}</p>
+      <b type="button" (click)="toggleCommentMore(item)">{{item.more? 'Menos': 'Más'}}</b>
+    </div>
+    <div class="text-end">
+      <span class="blockquote-footer">{{item.created_at}}</span>
+    </div>
+  </ng-template>
+
+  <ng-template #templateHistory let-item>
+    <span class="fw-semibold d-block w-100">{{item.tipo_estados_nombre}}</span>
+    <div class="w-100" *ngIf="item.comentario">
+      <p [ngClass]="{'text-truncate-3': !item.more}">{{item.comentario}}</p>
+      <b type="button" (click)="toggleCommentMore(item)">{{item.more? 'Menos': 'Más'}}</b>
+    </div>
+    <div class="text-end">
+      <span class="blockquote-footer">{{item.created_at}}</span>
+    </div>
+  </ng-template>
 </div>
