--- a/src/app/pages/maintenance/group/group.component.html
+++ b/src/app/pages/maintenance/group/group.component.html
@@ -286,8 +286,7 @@
                       <th scope="col">N°</th>
                       <th scope="col">Nombres</th>
                       <th scope="col">Apellidos</th>
-                      <th scope="col">Tipo Doc.</th>
-                      <th scope="col">N° Doc.</th>
+                      <th scope="col">Documento</th>
                       <th scope="col">Usuario</th>
                       <th scope="col">Tipo de usuario</th>
                     </tr>
@@ -306,8 +305,11 @@
                       <th scope="row">{{data.index}}</th>
                       <td>{{data.nombres}}</td>
                       <td>{{data.apellido_paterno}} {{data.apellido_materno}}</td>
-                      <td>{{data.tipo_documentos_abreviacion}}</td>
-                      <td>{{data.documento}}</td>
+                      <td>
+                        <ul class="list-group list-group-flush">
+                          <li class="list-group-item p-1 font-size-11" *ngFor="let identificacion of data?.identificaciones" [ngClass]="{'fw-bold': identificacion.is_primary}">{{identificacion.tipo_documentos_abreviacion}} {{identificacion.documento}}</li>
+                        </ul>
+                      </td>
                       <td>{{data.nombre_usuario}}</td>
                       <td>{{data.tipo_usuarios_nombre}}</td>
                     </tr>
@@ -437,8 +439,7 @@
                       <th scope="col">N°</th>
                       <th scope="col">Nombres</th>
                       <th scope="col">Apellidos</th>
-                      <th scope="col">Tipo Doc.</th>
-                      <th scope="col">N° Doc.</th>
+                      <th scope="col">Documento</th>
                       <th scope="col">Usuario</th>
                       <th scope="col">Tipo de usuario</th>
                       <th scope="col">Opciones</th>
@@ -449,8 +450,11 @@
                       <th scope="row">{{i + 1}}</th>
                       <td>{{data.nombres}}</td>
                       <td>{{data.apellido_paterno}} {{data.apellido_materno}}</td>
-                      <td>{{data.tipo_documentos_abreviacion}}</td>
-                      <td>{{data.documento}}</td>
+                      <td>
+                        <ul class="list-group list-group-flush">
+                          <li class="list-group-item p-1 font-size-11" *ngFor="let identificacion of data?.identificaciones" [ngClass]="{'fw-bold': identificacion.is_primary}">{{identificacion.tipo_documentos_abreviacion}} {{identificacion.documento}}</li>
+                        </ul>
+                      </td>
                       <td>{{data.nombre_usuario}}</td>
                       <td>{{data.tipo_usuarios_nombre}}</td>
                       <td>
@@ -466,8 +470,11 @@
                       <th scope="row">{{i + 1}}</th>
                       <td>{{data.nombres}}</td>
                       <td>{{data.apellido_paterno}} {{data.apellido_materno}}</td>
-                      <td>{{data.tipo_documentos_abreviacion}}</td>
-                      <td>{{data.documento}}</td>
+                      <td>
+                        <ul class="list-group list-group-flush">
+                          <li class="list-group-item p-1 font-size-11" *ngFor="let identificacion of data?.identificaciones" [ngClass]="{'fw-bold': identificacion.is_primary}">{{identificacion.tipo_documentos_abreviacion}} {{identificacion.documento}}</li>
+                        </ul>
+                      </td>
                       <td>{{data.nombre_usuario}}</td>
                       <td>{{data.tipo_usuarios_nombre}}</td>
                       <td>
