--- a/src/app/pages/sale/forms/form-sale-document/form-sale-document.component.html
+++ b/src/app/pages/sale/forms/form-sale-document/form-sale-document.component.html
@@ -1,21 +1,6 @@
 <form (keydown.enter)="$event.preventDefault()" [formGroup]="documentForm" autocomplete="off" >
   <div class="row g-2">
-    <!-- <div class="col-md-3 mb-3" *ngIf="'FORMS.FIELD_NAMES.type.label' | translate as translatedLabel;">
-      <label for="tipo" class="form-label">{{translatedLabel}} *</label>
-      <ng-select id="tipo" formControlName="tipo" [ngClass]="{ 'is-invalid': f.tipo.errors && (f.tipo.dirty || f.tipo.touched || submitted) }">
-        <ng-option [value]="''">{{'FORMS.FIELD_NAMES.type.default_option' | translate}}</ng-option>
-        <ng-option [value]="'PDF'">PDF</ng-option>
-      </ng-select>
-      <div *ngIf="f.tipo.errors && (f.tipo.dirty || f.tipo.touched || submitted)" class="invalid-feedback" align="left">
-        <div *ngIf="f.tipo.errors.required">
-          {{'FORMS.VALIDATION.required' | translate | replaceAttribute:':attribute': translatedLabel}}
-        </div>
-        <div *ngIf="f.tipo.errors.min">
-          {{'FORMS.VALIDATION.min' | translate | replaceAttribute: ':attribute': translatedLabel | replaceAttribute: ':min': f.tipo.errors.min.requiredLength}}
-        </div>
-      </div>
-    </div> -->
-    <div class="col-md-4 mb-3" *ngIf="'FORMS.FIELD_NAMES.name.label' | translate as translatedLabel;">
+    <div class="col-lg-5 mb-3" *ngIf="'FORMS.FIELD_NAMES.name.label' | translate as translatedLabel;">
       <label for="nombre" class="form-label">{{translatedLabel}} *</label>
       <input type="text" id="nombre" class="form-control" autofocus #focusNombre placeholder="{{'FORMS.FIELD_NAMES.name.placeholder' | translate}}" formControlName="nombre" [ngClass]="{ 'is-invalid': f.nombre.errors && (f.nombre.dirty || f.nombre.touched || submitted) }" />
       <div *ngIf="f.nombre.errors && (f.nombre.dirty || f.nombre.touched || submitted)" class="invalid-feedback" align="left">
@@ -30,7 +15,24 @@
         </div>
       </div>
     </div>
-    <div class="col-md-8 mb-3" *ngIf="'FORMS.FIELD_NAMES.file.label' | translate as translatedLabel;">
+    <div class="col-lg-3 mb-3" *ngIf="'FORMS.FIELD_NAMES.type_document.label' | translate as translatedLabel;">
+      <label for="tipo_documentos_id" class="form-label">{{translatedLabel}}</label>
+      <ng-select id="tipo_documentos_id" formControlName="tipo_documentos_id"
+        [notFoundText]="'No se encontraron elementos'"
+        [ngClass]="{ 'is-invalid': f.tipo_documentos_id.errors && (f.tipo_documentos_id.dirty || f.tipo_documentos_id.touched || submittedSearchClient) }">
+        <ng-option [value]="''">{{'FORMS.FIELD_NAMES.type_document.default_option' | translate}}</ng-option>
+        <ng-option *ngFor="let typeDocument of listTypeDocuments"
+          [value]="typeDocument.id">{{typeDocument.abreviacion}}</ng-option>
+      </ng-select>
+      <div
+        *ngIf="f.tipo_documentos_id.errors && (f.tipo_documentos_id.dirty || f.tipo_documentos_id.touched || submittedSearchClient)"
+        class="invalid-feedback" align="left">
+        <div *ngIf="f.tipo_documentos_id.errors['required']">
+          {{'FORMS.VALIDATION.required' | translate | replaceAttribute:':attribute':translatedLabel}}
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4 mb-3" *ngIf="'FORMS.FIELD_NAMES.file.label' | translate as translatedLabel;">
       <label for="file" class="form-label">{{translatedLabel}} *</label>
       <input class="form-control" type="file" id="file" #fileInput (change)="onFileSelected(fileInput)" [ngClass]="{'is-invalid': f.file && f.file.errors && (f.file.dirty || f.file.touched || submitted)}">
       <div *ngIf="f.file && f.file.errors && (f.file.dirty || f.file.touched || submitted)" class="invalid-feedback" align="left">
@@ -57,8 +59,8 @@
     </div>
   </div>
   <div class="d-flex flex-row flex-wrap gap-2 justify-content-end">
-    <button type="button" class="btn btn-light" (click)="onCancel()">{{'MODALS.BUTTONS.CANCEL' | translate}}</button>
-    <button type="button" class="btn btn-success" *ngIf="isNewData" (click)="onSubmit()">{{'FORMS.BUTTONS.REGISTER' | translate}}</button>
-    <button type="button" class="btn btn-info"  *ngIf="!isNewData" (click)="onSubmit()">{{'FORMS.BUTTONS.UPDATE' | translate}}</button>
+    <button type="button" class="btn btn-light" (click)="onCancel()"><i class="mdi mdi-book-off-outline me-1"></i> {{'MODALS.BUTTONS.CANCEL' | translate}}</button>
+    <button type="button" class="btn btn-success" *ngIf="isNewData" (click)="onSubmit()"><i class="mdi mdi-content-save me-1"></i> {{'FORMS.BUTTONS.REGISTER' | translate}}</button>
+    <button type="button" class="btn btn-info"  *ngIf="!isNewData" (click)="onSubmit()"><i class="mdi mdi-content-save me-1"></i> {{'FORMS.BUTTONS.UPDATE' | translate}}</button>
   </div>
 </form>
