--- a/src/app/pages/sale/tables/table-sale-document/table-sale-document.component.html
+++ b/src/app/pages/sale/tables/table-sale-document/table-sale-document.component.html
@@ -3,17 +3,14 @@
     <div class="d-flex flex-row flex-wrap justify-content-between align-items-start">
       <div class="">
         <h4 class="card-title text-primary">Documentos de la venta</h4>
-        <p class="card-sub-title">
+        <!-- <p class="card-sub-title">
           Archivos cargados a la venta
-        </p>
+        </p> -->
       </div>
       <div class="d-flex gap-2">
-        <button type="button" class="btn btn-primary" (click)="toggleForm()">
-          <i class="mdi" [ngClass]="{'mdi-plus': isCollapseForm, 'mdi-minus': !isCollapseForm}"></i>
-          Formulario
-        </button>
-        <button type="button" class="btn btn-secondary " (click)="toggleList()">
-          <i class="mdi" [ngClass]="{'mdi-arrow-collapse-down': isCollapseList, 'mdi-arrow-collapse-up': !isCollapseList}"></i>
+        <button type="button" class="btn btn-md btn-primary" (click)="toggleForm()" [ngClass]="{'btn-success': isCollapseForm, 'btn-primary': !isCollapseForm}">
+          <i class="mdi" [ngClass]="{'mdi-clipboard-edit': isCollapseForm, 'mdi-format-list-bulleted-square': !isCollapseForm}"></i>
+          {{isCollapseForm? ('FORMS.BUTTONS.FORM' | translate): 'FORMS.BUTTONS.LIST' | translate}}
         </button>
       </div>
     </div>
